--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -6,7 +6,7 @@
   background-color: #5923A8;
 }
 
-.forma {
+.form {
   display: flex;
   justify-content: space-between;
 }
@@ -25,7 +25,7 @@
   margin-top: 10px;
 }
 
-.agregarTarea {
+.newTask {
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
