--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -1,9 +1,11 @@
 #root {
+  display: flex;
   max-width: 1280px;
+  height: 100dvh;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background-color: #5923A8;
+  /* background-color: #5923A8; */
 }
 
 .form {
@@ -16,15 +18,9 @@
   flex-direction: column;
   justify-content: space-between;
   margin-top: 10px;
-  background-color: #6000F0;
-  border-radius: 8px;
-}
-
-.Tasks {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
-  background-color: #6000F0;
+  padding: 2rem;
+  /* background-color: #6000F0; */
+  background-color: #5923A8;
   border-radius: 8px;
 }
 
@@ -45,7 +41,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
-  margin-left: 70px;
+  /* margin-left: 70px; */
   background-color: #000000;
 }
 
